--- a/debian/rules
+++ b/debian/rules
@@ -228,6 +228,7 @@ endif
 
 override_dh_installinit:
 	dh_installinit --no-start
+	dh_installinit --name=lvm2 --no-start
 	# the following are only upstart jobs
 	dh_installinit --name=udevtrigger --noscripts
 	dh_installinit --name=udevmonitor --noscripts
