debian/extra/ifup@.service: Additionally run for "auto" class
We don't really support "allow-hotplug" in Ubuntu at the moment, the ifupdown
scripts for bridge-utils, ifenslave, vlan, and others only look for "auto".

So we need to deal with "auto" devices appearing after "/etc/init.d/networking
start" already ran.

LP: #1374521
LP: #1425376

--- a/debian/extra/units/ifup@.service
+++ b/debian/extra/units/ifup@.service
@@ -8,6 +8,7 @@ DefaultDependencies=no
 IgnoreOnIsolate=yes
 
 [Service]
-ExecStart=/bin/sh -ec 'ifup --allow=hotplug %I; ifquery --state %I'
+ExecStart=/bin/sh -ec 'ifup --allow=hotplug %I; ifup --allow=auto %I; \
+    if ifquery %I >/dev/null; then ifquery --state %I >/dev/null; fi'
 ExecStop=/sbin/ifdown %I
 RemainAfterExit=true
