Put session scopes into all cgroup controllers instead of their parent user slices
Also make their directories owned by the user, so that they can create
subgroups.

This makes unprivileged user LXC containers work under systemd.

LP: #1346734

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -41,3 +41,7 @@ Restrictions: needs-recommends, needs-root, isolation-container, allow-stderr
 Tests: systemd-fsckd
 Depends: systemd-sysv, python3, plymouth
 Restrictions: needs-root, isolation-machine, needs-recommends, breaks-testbed
+
+Tests: user-session-cgroups
+Depends: systemd-sysv
+Restrictions: isolation-container
