ifup@.service: Lessen dependencies
Drop dependency on networking.service (i. e. /etc/init.d/networking), and
merely ensure that /run/network exists. This avoids unnecessary
dependencies/waiting during boot and dependency cycles if hooks wait for other
interfaces to come up (like ifenslave with bonding interfaces).

LP: #1414544

--- a/debian/extra/units/ifup@.service
+++ b/debian/extra/units/ifup@.service
@@ -1,9 +1,8 @@
 [Unit]
 Description=ifup for %I
-After=local-fs.target network-pre.target networking.service apparmor.service
+After=local-fs.target network-pre.target apparmor.service systemd-tmpfiles-setup.service
 Before=network.target
 BindsTo=sys-subsystem-net-devices-%i.device
-ConditionPathIsDirectory=/run/network
 DefaultDependencies=no
 IgnoreOnIsolate=yes
 
