--- a/debian/control
+++ b/debian/control
@@ -43,7 +43,7 @@ Build-Depends: debhelper (>= 9.20141010),
                libkmod-dev (>= 15),
                libblkid-dev (>= 2.24),
                libmount-dev (>= 2.27.1),
-               libseccomp-dev (>= 2.2.1-2~) [amd64 arm64 armel armhf i386 mips mipsel mips64 mips64el x32],
+               libseccomp-dev (>= 1.0.0) [amd64 arm64 armel armhf i386 mips mipsel mips64 mips64el x32 powerpc ppc64el],
                libdw-dev (>= 0.158) <!stage1>,
                linux-base <!nocheck>,
                acl <!nocheck>,
