--- a/debian/control
+++ b/debian/control
@@ -310,6 +310,7 @@ Breaks: consolekit (<< 0.4.6-1),
         bash-completion (<< 1:2.1),
         systemd (<< 224-2),
         ifupdown (<< 0.8.5~),
+        lvm2 (<< 2.02.133-1ubuntu1),
 Replaces: bash-completion (<< 1:2.1),
           systemd (<< 224-2)
 Description: /dev/ and hotplug management daemon
