jessie-backport: Drop versioned Build-Depends on libcap-dev
See git commit de8105491

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends: debhelper (>= 9.20160114),
                intltool,
                gperf,
                gnu-efi [amd64 i386],
-               libcap-dev (>= 1:2.24-9~),
+               libcap-dev,
                libpam0g-dev,
                libapparmor-dev (>= 2.9.0-3+exp2) <!stage1>,
                libidn11-dev <!stage1>,
