jessie-backport: Adjust dependencies on util-linux + mount

--- a/debian/control
+++ b/debian/control
@@ -64,8 +64,8 @@ Pre-Depends: ${shlibs:Pre-Depends},
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libsystemd0 (= ${binary:Version}),
-         util-linux (>= 2.27.1),
-         mount (>= 2.26),
+         util-linux (>= 2.25.2-6),
+         mount (>= 2.25.2-6),
          adduser,
          libcap2-bin
 Breaks: lvm2 (<< 2.02.104-1),
