--- a/debian/control
+++ b/debian/control
@@ -301,7 +301,7 @@ Depends: ${shlibs:Depends},
          adduser,
          libudev1 (= ${binary:Version}),
          lsb-base (>= 3.0-6),
-         util-linux (>= 2.27.1),
+         util-linux (>= 2.25.2-6),
          s390-tools (>> 1.6.2) [s390],
          procps
 Breaks: consolekit (<< 0.4.6-1),
